tests/golden/error/relative_import_depth2_fail/outer/target.tg
pub fn secret_fn() -> String {
    "secret"
}
